--- a/UIClient/UIClient/Base.lproj/Main.storyboard
+++ b/UIClient/UIClient/Base.lproj/Main.storyboard
@@ -30,18 +30,32 @@
                                     <action selector="loginClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="naM-uo-RCe"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Th1-QI-BXK" userLabel="Logout">
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Th1-QI-BXK" userLabel="Purchase">
                                 <rect key="frame" x="159" y="116" width="96" height="40"/>
                                 <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="96" id="9QM-4J-CYj"/>
                                     <constraint firstAttribute="width" secondItem="Th1-QI-BXK" secondAttribute="height" multiplier="12:5" id="Gjo-f5-sEa"/>
                                 </constraints>
+                                <state key="normal" title="Purchase">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="purchase:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Vim-zI-qC6"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hpg-dl-9Vt" userLabel="Logout">
+                                <rect key="frame" x="159" y="177" width="96" height="40"/>
+                                <color key="backgroundColor" systemColor="systemOrangeColor" red="1" green="0.58431372550000005" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="hpg-dl-9Vt" secondAttribute="height" multiplier="12:5" id="fBE-mf-Jqj"/>
+                                    <constraint firstAttribute="width" constant="96" id="uWV-C4-4IE"/>
+                                </constraints>
                                 <state key="normal" title="Logout">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
-                                    <action selector="logoutClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="tte-SR-Qpr"/>
+                                    <action selector="logoutClick:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rSC-HG-wDN"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -49,9 +63,13 @@
                         <constraints>
                             <constraint firstItem="Th1-QI-BXK" firstAttribute="width" secondItem="Th1-QI-BXK" secondAttribute="height" multiplier="12:5" id="DUI-Yv-OaM"/>
                             <constraint firstItem="Th1-QI-BXK" firstAttribute="leading" secondItem="V6i-vT-9VT" secondAttribute="leading" id="JvF-sn-osu"/>
+                            <constraint firstItem="hpg-dl-9Vt" firstAttribute="width" secondItem="hpg-dl-9Vt" secondAttribute="height" multiplier="12:5" id="KA0-t4-OV1"/>
+                            <constraint firstItem="hpg-dl-9Vt" firstAttribute="top" secondItem="Th1-QI-BXK" secondAttribute="bottom" constant="21" id="VNv-jj-aSM"/>
                             <constraint firstItem="V6i-vT-9VT" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="XgC-T2-1VS"/>
+                            <constraint firstItem="hpg-dl-9Vt" firstAttribute="leading" secondItem="Th1-QI-BXK" secondAttribute="leading" id="Z6m-46-krw"/>
                             <constraint firstItem="V6i-vT-9VT" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="fId-jC-Scn"/>
                             <constraint firstItem="V6i-vT-9VT" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="gyX-aD-42X"/>
+                            <constraint firstItem="hpg-dl-9Vt" firstAttribute="width" secondItem="hpg-dl-9Vt" secondAttribute="height" multiplier="12:5" id="nO4-GY-lub"/>
                             <constraint firstItem="Th1-QI-BXK" firstAttribute="top" secondItem="V6i-vT-9VT" secondAttribute="bottom" constant="22" id="xCZ-O7-QDe"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
